multi-controller-ingress/full-stack-app-ingress/grafana-ingress.yaml
# Ingress for grafana-service using Traefik Ingress Controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
  - host: grafana.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 80
